--- a/Resources/Private/Templates/Administration/Index.html
+++ b/Resources/Private/Templates/Administration/Index.html
@@ -1,6 +1,6 @@
 <f:layout name="Default" />
 
-<f:section name="Title">Admin Area</f:section>
+<f:section name="Title"><f:translate id="adm.title" /></f:section>
 
 <f:section name="Styles"></f:section>
 <f:section name="HeaderJS"></f:section>
@@ -9,7 +9,7 @@
     <div class="container">
         <f:render partial="FlashMessages" />
         <div class="row">
-            <h1>Manage appointments</h1>
+            <h1><f:translate id="adm.manageAppointments" /></h1>
         </div>
         <div class="clearfix">&nbsp;</div>
         <div class="row">
@@ -19,8 +19,8 @@
                         <thead>
                         <tr>
                             <th><f:translate id="name" /></th>
-                            <th><f:translate id="adm.starttime" /></th>
-                            <th><f:translate id="adm.endtime" /></th>
+                            <th><f:translate id="form.starttime" /></th>
+                            <th><f:translate id="form.endtime" /></th>
                             <th><f:translate id="participants" /></th>
                             <th></th>
                             <th></th>
@@ -30,8 +30,8 @@
                         <f:for each="{appointments}" as="appointment">
                             <tr class="{f:if(condition: appointment.overdue, then: 'danger')}">
                                 <td>{appointment.name}</td>
-                                <td><i class="fa fa-calendar{f:if(condition: appointment.overdue, then: '-times')}-o fa-fw text-success"></i> {appointment.starttime -> f:format.date(format: 'D, d M, Y')}</td>
-                                <td><i class="fa fa-calendar{f:if(condition: appointment.overdue, then: '-times')}-o fa-fw text-danger"></i> {appointment.endtime -> f:format.date(format: 'D, d M, Y')}</td>
+                                <td><i class="fa fa-calendar{f:if(condition: appointment.overdue, then: '-times')}-o fa-fw text-success"></i> {appointment.starttime -> f:format.date(format: settings.date.format.short)}</td>
+                                <td><i class="fa fa-calendar{f:if(condition: appointment.overdue, then: '-times')}-o fa-fw text-danger"></i> {appointment.endtime -> f:format.date(format: settings.date.format.short)}</td>
                                 <td>
                                     <f:for each="{appointment.participants}" as="participant" iteration="iterator">
                                         <f:translate id="gender{participant.salutation}" /> {participant.name}<f:if condition="{iterator.isLast} == 0">,</f:if>
@@ -39,13 +39,21 @@
                                 </td>
                                 <td>
                                     <f:if condition="{appointment.image}">
-                                        <a href="{f:uri.resource(resource: appointment.image)}" target="_blank" title="View image"><i class="fa fa-picture-o fa-fw"></i></a>
+                                        <a href="{f:uri.resource(resource: appointment.image)}" target="_blank" title="{f:translate(id: 'title.image.show')}"><i class="fa fa-picture-o fa-fw"></i></a>
+                                        <f:comment><!--<f:link.action action="deleteImage" controller="Administration" arguments="{appointment: appointment}" title="{f:translate(id: 'title.image.delete')}"><i class="fa fa-trash-o fa-fw text-danger"></i></f:link.action>--></f:comment>
                                     </f:if>
                                 </td>
                                 <td>
-                                    <f:link.action action="showAppointment" controller="Administration" arguments="{appointment: appointment}" title="show"><i class="fa fa-eye fa-fw text-default"></i></f:link.action>
+                                    <f:link.action action="showAppointment" controller="Administration" arguments="{appointment: appointment}" title="{f:translate(id: 'title.appointment.show')}"><i class="fa fa-eye fa-fw text-default"></i></f:link.action>
                                     <f:security.ifHasRole role="Administrator">
-                                        <f:link.action action="editAppointment" controller="Administration" arguments="{appointment: appointment}" title="Edit appointment"><i class="fa fa-pencil fa-fw text-default"></i></f:link.action>
+                                        <f:link.action action="editAppointment" controller="Administration" arguments="{appointment: appointment}" title="{f:translate(id: 'title.appointment.edit')}">
+                                            <i class="fa fa-pencil fa-fw text-default"></i>
+                                        </f:link.action>
+                                        <f:if condition="{appointment.overdue} == 0">
+                                            <f:link.action action="deleteAppointment" controller="Administration" arguments="{appointment: appointment}" title="{f:translate(id: 'title.appointment.delete')}" onclick="return confirm({f:translate(id: 'modal.delete.confirm')})">
+                                                <i class="fa fa-trash-o fa-fw text-danger"></i>
+                                            </f:link.action>
+                                        </f:if>
                                     </f:security.ifHasRole>
                                 </td>
                             </tr>
@@ -64,31 +72,38 @@
         <div class="clearfix">&nbsp;</div>
         <div class="row">
             <p>
-                <f:link.action action="newAppointment" controller="Administration" class="btn btn-primary"><i class="fa fa-calendar-plus-o fa-fw"></i> New Appointment</f:link.action>
-                <f:link.action action="cleanup" controller="Administration" class="btn btn-danger" title="clean" onclick="return confirm('Are you sure?')"><i class="fa fa-trash"></i> Clean DB</f:link.action>
+                <f:link.action action="newAppointment" controller="Administration" class="btn btn-primary"><i class="fa fa-calendar-plus-o fa-fw"></i> <f:translate id="appointment.new" /></f:link.action>
+                <f:link.action action="cleanup" controller="Administration" class="btn btn-danger" onclick="return confirm('{f:translate(id: \'modal.delete.confirm\')}')"><i class="fa fa-trash"></i> <f:translate id="cleanupDB" /></f:link.action>
             </p>
             <hr />
-            <h3>Slides</h3>
+            <h3><f:translate id="slides" /></h3>
+            <hr />
             <f:if condition="{slides -> f:count()}">
                 <f:then>
-                    <f:for each="{slides}" as="slide" iteration="iterator">
+                    <f:for each="{slides}" as="slide">
                         <div class="slide-preview">
-                            <img src="{f:uri.resource(resource: slide)}" height="150" />
-                            <f:link.action action="removeSlide" arguments="{slide: slide.sha1}" class="alert alert-danger link" title="Remove Slide">
+                            <img src="{f:uri.resource(resource: slide)}" height="150" title="{slide.filename}" data-toggle="tooltip" />
+                            <f:link.action action="removeSlide"
+                                           arguments="{slide: slide.sha1}"
+                                           class="alert alert-danger link"
+                                           title="{f:translate(id: 'title.slide.delete')}"
+                                           additionalAttributes="{data-toggle: 'tooltip', data-placement: 'bottom'}">
                                 <i class="fa fa-trash-o fa-fw text-danger"></i>
                             </f:link.action>
                         </div>
                     </f:for>
+                    <div class="clearfix"></div>
+                    <small><f:format.nl2br><f:translate id="adm.slides.description" /></f:format.nl2br></small>
                 </f:then>
             </f:if>
-            <div class="clearfix"></div>
             <hr />
-            <p><f:link.action action="uploadSlides" class="btn btn-default"><i class="fa fa-slideshare fa-fw"></i> Add Slides</f:link.action></p>
+            <p><f:link.action action="uploadSlides" class="btn btn-default"><i class="fa fa-slideshare fa-fw"></i> <f:translate id="slides.add" /></f:link.action></p>
         </div>
     </div>
 
     <script>
         $(function() {
+            $('[data-toggle="tooltip"]').tooltip();
             $('.slide-preview').on('mouseenter', function() {
                 $(this).children('.link').first().show();
             });
