--- a/Resources/Public/Styles/main.css
+++ b/Resources/Public/Styles/main.css
@@ -1,3 +1,16 @@
+@font-face {
+	font-family: "DIN Offc";
+	src: url(/_Resources/Static/Packages/Ecom.Terminal/Fonts/DINOffc.ttf);
+}
+@font-face {
+	font-family: "DIN Offc Bold";
+	src: url(/_Resources/Static/Packages/Ecom.Terminal/Fonts/DINOffc-Bold.ttf);
+}
+@font-face {
+	font-family: "DIN Offc Light";
+	src: url(/_Resources/Static/Packages/Ecom.Terminal/Fonts/DINOffc-Light.ttf);
+}
+
 .clearfix:after {
 	clear: both;
 	content: ".";
@@ -16,7 +29,7 @@ html {
 	-webkit-tap-highlight-color:rgba(0,0,0,0)
 }
 body {
-	font-family: "Roboto Condensed", Roboto, Helvetica, Arial, sans-serif;
+	font-family: "DIN Offc Light", "Roboto Condensed", Roboto, Helvetica, Arial, sans-serif !important;
 	font-size: 14px;
 	line-height: 1.42857143;
 	background-color: #fff;
@@ -43,6 +56,7 @@ iframe#fullscreen {
 	margin-bottom: 1em;
 	padding: 10px;
 	width: 100%;
+	z-index: 100000;
 }
 
 #user-panel.sticky {
@@ -71,22 +85,21 @@ iframe#fullscreen {
 .slide-preview > .link {
 	border-left: 0;
 	border-radius: 0;
+	bottom: -20px; /* half the height (15) plus padding bottom (5) */
 	display: none;
+	filter: alpha(opacity=75);
 	height: 30px;
 	left: 0;
+	opacity: .75;
 	padding: 5px;
 	position: absolute;
 	text-align: center;
-	top: 0;
 	width: 100%;
 }
 
 .slide-preview > .link:hover {
-	background: rgb(255, 141, 144);
-}
-
-.slide-preview > .link:hover * {
-	color: #fff;
+	filter: alpha(opacity=100);
+	opacity: 1;
 }
 
 .drop-files-container {
@@ -103,4 +116,100 @@ iframe#fullscreen {
 
 .drop-files-container:hover {
 	background-color: #f6f6f6;
+}
+
+img.fullscreen {
+	height: 100%;
+	width: 100%;
+}
+
+body.fullscreen {
+	-webkit-background-size: cover !important;
+	-moz-background-size: cover !important;
+	-o-background-size: cover !important;
+	background-size: cover !important;
+}
+
+.tooltip {
+	overflow: hidden;
+}
+
+header.appointment-def {
+	background: transparent url("/_Resources/Static/Packages/Ecom.Terminal/Images/head.png") no-repeat top right scroll;
+	height: 299px;
+}
+
+header.appointment-def > h1,
+header.appointment-user > h1 {
+	font-family: "DIN Offc Light", "DIN Offc", "Roboto Condensed", Roboto, Helvetica, Arial, sans-serif;
+	font-size: 96px;
+}
+
+header.appointment-def > h1 {
+	/*background: transparent url("/_Resources/Static/Packages/Ecom.Terminal/Images/head-repeat.png") repeat-x top left scroll;*/
+	color: #b1b3b4;
+	height: 299px;
+	margin-top: 0;
+	padding: 130px 50px 0;
+}
+
+header.appointment-user > h1 {
+	margin-top: 50px;
+	text-align: center;
+}
+
+section.appointment-def,
+section.appointment-user {
+	font-size: 60px;
+	line-height: 2;
+}
+
+section.appointment-def {
+	color: #fff;
+	padding: 50px;
+}
+
+section.appointment-user {
+	text-align: center;
+}
+
+section.appointment-def > h2,
+section.appointment-user > h2 {
+	font-family: "DIN Offc", "Roboto Condensed", Roboto, Helvetica, Arial, sans-serif;
+	font-size: 72px;
+	margin-bottom: 50px;
+}
+
+hr.appointment-user {
+	border-bottom: 4px double #ccc;
+	margin: 50px auto;
+	width: 80%;
+}
+
+img#handshake {
+	bottom: 50px;
+	position: fixed;
+	right: 50px;
+}
+
+.colorpicker-2x .colorpicker-saturation {
+	width: 200px;
+	height: 200px;
+}
+.colorpicker-2x .colorpicker-hue,
+.colorpicker-2x .colorpicker-alpha {
+	width: 30px;
+	height: 200px;
+}
+.colorpicker-2x .colorpicker-color,
+.colorpicker-2x .colorpicker-color div{
+	height: 30px;
+}
+
+.bootstrap-datetimepicker-widget {
+	z-index: 10000 !important;
+}
+
+.colorpicker::before {
+	display: none !important;
 }
