--- a/Resources/Private/Templates/Administration/EditAppointment.html
+++ b/Resources/Private/Templates/Administration/EditAppointment.html
@@ -56,9 +56,17 @@
                     <p class="help-block"><f:translate id="form.fontColor.help" /></p>
                 </div>
                 <div class="form-group">
-                    <label for="image"><f:translate id="image" /></label>
-                    <f:form.upload property="image" value="{appointment.image}" id="image" additionalAttributes="{accept: 'image/gif, image/jpeg, image/png'}" />
-                    <p class="help-block"><f:translate id="form.image.help" /></p>
+                    <div class="col-md-6">
+                        <label for="image"><f:translate id="image" /></label>
+                        <f:form.upload property="image" value="{appointment.image}" id="image" additionalAttributes="{accept: 'image/gif, image/jpeg, image/png'}" />
+                        <p class="help-block"><f:translate id="form.image.help" /></p>
+                    </div>
+                    <div class="col-md-6">
+                        <f:if condition="{appointment.image}">
+                            <img src="{f:uri.resource(resource: appointment.image)}" width="200" /> &nbsp;
+                            <f:form.checkbox name="deleteImage" id="deleteImage" value="1" /> <label class="text-danger" for="deleteImage"><f:translate id="title.image.delete" /></label>
+                        </f:if>
+                    </div>
                 </div>
                 <div class="clearfix">&nbsp;</div>
                 <fieldset id="participants">
